--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "supercha",
+  "name": "superguy",
   "private": true,
   "scripts": {
     "prettier": "bunx prettier --write .",
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,py,md}\"",
     "lint": "turbo run lint",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "turbo": "^2.5.1",
     "typescript": "5.8.2"
